--- a/app/src/filebrowser/view/filebrowser.html
+++ b/app/src/filebrowser/view/filebrowser.html
@@ -4,7 +4,7 @@
         <content-list content-list="content" click-action="open"></content-list>
     </md-card-content>
 
-    <md-card-actions layout="row" layout-align="start center" ng-if="!disableActions">
+    <md-card-actions layout="row" layout-align="start center" ng-hide="hideActions">
         <md-button ng-controller="UploadController as uc" ng-click="uc.openDialog()" class="md-icon-button md-primary" aria-label="{{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}">
             <md-tooltip md-direction="top">{{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}</md-tooltip>
             <md-icon>file_upload</md-icon>
