added ui elements

--- a/app/src/declaration/view/info-cards.html
+++ b/app/src/declaration/view/info-cards.html
@@ -20,3 +20,8 @@
         </div>
     </div>
 </form>
+
+<md-button class="md-fab md-fab-bottom-right" aria-label="Opret erklæring" ng-click="">
+    <md-icon>add</md-icon>
+    <md-tooltip md-direction="left">Opret erklæring</md-tooltip>
+</md-button>
