--- a/app/src/declaration/view/info-cards.html
+++ b/app/src/declaration/view/info-cards.html
@@ -21,7 +21,7 @@
     </div>
 </form>
 
-<md-button class="md-fab md-fab-bottom-right" aria-label="Opret erklæring" ng-click="">
+<md-button class="md-fab md-fab-bottom-right" aria-label="Opret erklæring" ng-click="vm.hej()" >
     <md-icon>add</md-icon>
     <md-tooltip md-direction="left">Opret erklæring</md-tooltip>
 </md-button>
