fixed date picker, it now shows at correct width

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -156,6 +156,10 @@ md-toolbar {
   display: none;
 }
 
+.md-datepicker-calendar {
+  width: 100px !important;
+}
+
 md-input-container {
   margin: 0;
 }
