--- a/app/src/lool/view/lool.html
+++ b/app/src/lool/view/lool.html
@@ -1,14 +1,17 @@
-<div class="od-projects"  ng-controller="DocumentController as vm">
-    <h1 class="od-title">Dokument: {{ vm.doc.displayName }}</h1>
-
-
+<div class="od-projects" ng-controller="DocumentController as vm">
     <div layout-gt-sm="row">
         <md-card flex-gt-sm="100" class="iframe_container">
             <md-card-content>
-				<div layout="row" class="btnAlign">
-					<div flex="90"><h2 class="od-title-icon"><i class="material-icons">library_books</i>{{'COMMON.EDITINLIBRE' | translate}}</h2></div>
-					<div flex="10"><md-button ng-click="vm.goBack();" class="md-raised md-primary">{{'COMMON.CLOSEEDIT' | translate}}</md-button></div>
-				</div>
+                <div layout="row" class="btnAlign">
+                    <div flex="90">
+                        <h2 class="od-title-icon"><i class="material-icons">library_books</i>{{'COMMON.EDITINLIBRE' |
+                            translate}}</h2>
+                    </div>
+                    <div flex="10">
+                        <md-button ng-click="vm.goBack();" class="md-raised md-primary">{{'COMMON.CLOSEEDIT' |
+                            translate}}</md-button>
+                    </div>
+                </div>
                 <div id="libreoffice-online">
                     <iframe id="loleafletframe" name="loleafletframe" allowfullscreen style="width:98%;height:85%;
                     position:absolute;">
