--- a/app/src/declaration/view/sections/referral.html
+++ b/app/src/declaration/view/sections/referral.html
@@ -20,7 +20,7 @@
         <div>
             <md-input-container class="md-block">
                 <label>Journalnummer</label>
-                <input ng-model="case.journalNumber" >
+                <input ng-model="case.journalNumber" ng-disabled="!editPatientData">
             </md-input-container>
         </div>
 
