--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -154,7 +154,7 @@ md-toolbar {
 }
 
 md-input-container {
-  margin: 0;
+  // margin: 0;
 }
 
 // Avoid the first label in form will touch toolbar in login
