--- a/app/src/declaration/view/info-cards.html
+++ b/app/src/declaration/view/info-cards.html
@@ -1,20 +1,20 @@
 <form name="$root.declarationForm" ng-hide="isLoading">
     <div layout="row" layout-wrap>
-        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <div layout="column" flex-gt-md="25" flex-gt-sm="50" flex-sm="100" flex="100">
             <ng-include src="'app/src/declaration/view/sections/basic-info.html'"></ng-include>
             <ng-include src="'app/src/declaration/view/sections/referral.html'"></ng-include>
         </div>
 
-        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <div layout="column" flex-gt-md="25" flex-gt-sm="50" flex-sm="100" flex="100">
             <ng-include src="'app/src/declaration/view/sections/declaration.html'"></ng-include>
             <ng-include src="'app/src/declaration/view/sections/icd-10.html'"></ng-include>
         </div>
 
-        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <div layout="column" flex-gt-md="25" flex-gt-sm="50" flex-sm="100" flex="100">
             <ng-include src="'app/src/declaration/view/sections/judgement.html'"></ng-include>
         </div>
 
-        <div layout="column" flex-gt-sm="25" flex-sm="50" flex="100">
+        <div layout="column" flex-gt-md="25" flex-gt-sm="50" flex-sm="100" flex="100">
             <ng-include src="'app/src/declaration/view/sections/doctor-board.html'"></ng-include>
             <ng-include src="'app/src/declaration/view/sections/history.html'"></ng-include>
         </div>
