--- a/app/src/declaration/view/sections/judgement.html
+++ b/app/src/declaration/view/sections/judgement.html
@@ -31,7 +31,7 @@
                 </md-input-container>
                 <md-input-container class="md-block">
                     <label>Bemærkninger</label>
-                    <textarea class="textarea-highlight" ng-model="case.remarks" rows="8" md-select-on-focus ng-disabled="!editPatientData"></textarea>
+                    <textarea class="textarea-highlight" ng-model="case.finalVerdictNote" rows="8" md-select-on-focus ng-disabled="!editPatientData"></textarea>
                 </md-input-container>
         </div>
     </md-card-content>
