--- a/app/src/declaration/view/sections/basic-info.html
+++ b/app/src/declaration/view/sections/basic-info.html
@@ -8,7 +8,7 @@
         <div layout="row">
             <md-input-container class="md-block" flex>
                 <label>CPR</label>
-                <input ng-model="case.cprNumber" maxlength="10" minlength="10" ng-disabled="!editPatientData" name="cprNo" required>
+                <input ng-model="case.cprNumber" ng-disabled="!editPatientData" name="cprNo" required>
             </md-input-container>
             <md-button class="md-icon-button" ng-click="vm.lookupCPR()" ng-disabled="!editPatientData || $root.declarationForm.cprNo.$invalid">
                 <md-icon>cached</md-icon>
