--- a/app/src/lool/view/lool.html
+++ b/app/src/lool/view/lool.html
@@ -1,4 +1,4 @@
-<div class="od-projects" ng-controller="DocumentController as vm">
+<div class="od-projects" ng-controller="LoolController as vm">
     <div layout-gt-sm="row">
         <md-card flex-gt-sm="100" class="iframe_container">
             <md-card-content>
