fix for merging problems when releasing 29177

--- a/app/src/documents/view/documentActions.html
+++ b/app/src/documents/view/documentActions.html
@@ -6,7 +6,7 @@
 
     <md-card-content>
         <div>
-            <md-button ng-show="vm.loolEditable && vm.canEdit && !vm.state" ng-click="vm.goToLOEditPage()" class="md-text-icon-button md-primary">
+            <md-button ng-show="vm.loolEditable && vm.canEdit" ng-click="vm.goToLOEditPage()" class="md-text-icon-button md-primary">
                 <md-icon md-menu-align-target>edit</md-icon>
                 {{'DOCUMENT.EDIT_DOCUMENT' | translate }}
             </md-button>
