--- a/app/src/documents/view/documentActions.html
+++ b/app/src/documents/view/documentActions.html
@@ -13,7 +13,7 @@ background-color: #e1e1e1;
 
 
 
-<md-card class="dropdown-card" >
+<md-card class="dropdown-card"  ng-show="vm.canRevertDocument()">
     <md-card-title ng-click="vm.updateCollapse()" >
         <h3 class="md-title od-title-icon"><md-icon>history</md-icon> {{'COMMON.HISTORY' | translate }}</h3>
         <span flex></span>
@@ -30,7 +30,7 @@ background-color: #e1e1e1;
             </div>
         </div>
 
-        <div class="entry" ng-repeat="h in vm.history" layout="row" ng-class="vm.selectedVersion === h.version ? 'highlight' : ''">
+        <div class="entry" ng-repeat="h in vm.history" layout="row" ng-class="vm.selectedVersion === h.version || h.version === vm.history.latest_version ? 'highlight' : '' ">
             <div flex="50">
                 <a ui-sref="document({ doc: h.parent_nodeRef, versionId: h.nodeRef, version: h.version})">{{ h.created | openeDate}}</a>
             </div>
