fixed bug with pdf-preview - missing node var

--- a/app/src/documents/view/documentActions.html
+++ b/app/src/documents/view/documentActions.html
@@ -43,7 +43,7 @@ background-color: #e1e1e1;
 </style>
 
 
-<md-card class="dropdown-card"  ng-show="vm.canRevertDocument()">
+<md-card class="dropdown-card"  ng-show="vm.canRevertDocument">
 
     <md-card-title ng-click="vm.updateCollapse()" >
         <h3 class="md-title od-title-icon"><md-icon>history</md-icon> {{'COMMON.HISTORY' | translate }}</h3>
