added extra css

--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -1,3 +1,10 @@
+<style>
+    .md-virtual-repeat-container.md-autocomplete-suggestions-container {
+        width:700px !important;
+    }
+</style>
+
+
 <md-card>
     <md-card-title>
         <md-card-title-text>
@@ -6,7 +13,7 @@
     </md-card-title>
     <md-card-content>
         <div>
-        <md-autocomplete flex 
+        <md-autocomplete flex
             md-selected-item="case.placement" 
             md-search-text="placementSearch"
             md-items="placement in propertyFilter(propertyValues['placement'],placementSearch)" 
@@ -23,8 +30,9 @@
         <md-tooltip md-direction="top" md-delay="500" ng-if="case.placement != null">{{case.placement}}</md-tooltip>
         </div>
         <div>
-        <md-autocomplete flex 
-            md-selected-item="case.sanctionProposal" 
+        <md-autocomplete flex
+
+            md-selected-item="case.sanctionProposal"
             md-search-text="sanctionProposalSearch"
             md-items="sanctionProposal in propertyFilter(propertyValues['sanctionProposal'],sanctionProposalSearch)" 
             md-item-text="sanctionProposal" 
