shorten some headlines

--- a/app/src/system_settings/practitioners/view/practitioner-list.html
+++ b/app/src/system_settings/practitioners/view/practitioner-list.html
@@ -42,12 +42,12 @@ table.md-table:not(.md-row-select) th.md-column:nth-child(n+2):nth-last-child(n+
                 <thead md-head md-order="query.order" >
                     <tr md-row>
                         <th md-column md-order-by="firstName">Navn</th>
-                        <th md-column md-numeric md-order-by="active">Aktiveret</th>
-                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteConsumer">Kun læse</th>
-                        <th md-column md-numeric md-order-by="GROUP_reopen_cases">Genåbne sager og Versionering</th>
-                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteListManager">Redigere lister</th>
-                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteRoleManager">Tildele roller</th>
-                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_TemplateFolderValueManager">Oprette dokumentskabeloner</th>
+                        <th md-column md-numeric md-order-by="active">Aktiv</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteConsumer">Læse </th>
+                        <th md-column md-numeric md-order-by="GROUP_reopen_cases">Genåbn/Versionering</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteListManager">Rediger</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_SiteRoleManager">Tildel</th>
+                        <th md-column md-numeric md-order-by="GROUP_site_retspsyk_TemplateFolderValueManager">Skabelon</th>
                     </tr>
                 </thead>
 
