--- a/app/src/declaration/view/sections/declaration.html
+++ b/app/src/declaration/view/sections/declaration.html
@@ -29,24 +29,39 @@
         </md-autocomplete>
         <md-tooltip md-direction="top" md-delay="500" ng-if="case.placement != null">{{case.placement}}</md-tooltip>
         </div>
-        <div>
-        <md-autocomplete flex
 
-            md-selected-item="case.sanctionProposal"
-            md-search-text="sanctionProposalSearch"
-            md-items="sanctionProposal in propertyFilter(propertyValues['sanctionProposal'],sanctionProposalSearch)" 
-            md-item-text="sanctionProposal" 
-            md-min-length="0" 
-            md-floating-label="Sanktionsforslag"
-            ng-disabled="!editPatientData"
-            md-clear-button="editPatientData"
-            md-require-match="true">
-            <md-item-template>
-                <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
-            </md-item-template>
-        </md-autocomplete>
-        <md-tooltip md-direction="top" md-delay="500" ng-if="case.sanctionProposal != null">{{case.sanctionProposal}}</md-tooltip>
+
+
+        <div ng-show="editPatientData">
+
+            <md-autocomplete flex
+                             md-selected-item="case.sanctionProposal"
+                             md-search-text="sanctionProposalSearch"
+                             md-items="sanctionProposal in propertyFilter(propertyValues['sanctionProposal'],sanctionProposalSearch)"
+                             md-item-text="sanctionProposal"
+                             md-min-length="0"
+                             md-floating-label="Sanktionsforslag"
+                             ng-disabled="!editPatientData"
+                             md-clear-button="editPatientData"
+                             md-require-match="true">
+                <md-item-template>
+                    <span md-highlight-text="sanctionProposalSearch" md-highlight-flags="gi">{{sanctionProposal}}</span>
+                </md-item-template>
+            </md-autocomplete>
+            <md-tooltip md-direction="top" md-delay="500" ng-if="case.sanctionProposal != null">{{case.sanctionProposal}}</md-tooltip>
         </div>
+
+
+
+        <div ng-show="!editPatientData">
+            <md-input-container class="md-block">
+                <label>Sanktionsforslag</label>
+                <textarea  ng-model="case.sanctionProposal" ng-disabled="!editPatientData" ></textarea>
+            </md-input-container>
+        </div>
+
+
+
 
         <p class="md-subhead">Afgivet af<br></p>
         <md-autocomplete flex 
