--- a/app/src/system_settings/practitioners/view/practitioner-list.html
+++ b/app/src/system_settings/practitioners/view/practitioner-list.html
@@ -79,7 +79,7 @@
         <md-select ng-model="searchParams_bua" ng-change="reloadWithNewValue(searchParams_bua)">
             <md-option ng-value="'PS'" >PS</md-option>
             <md-option ng-value="'BUA'" >BUA</md-option>
-            <md-option ng-value="undefined">Alle</md-option>
+            <md-option ng-value="'Alle'">Alle</md-option>
         </md-select>
     </md-input-container>
     </md-card-content>
