hotfixes - 14day before allowed to close case and missing initializing of closecase variable

--- a/app/src/declaration/view/lock-dialog.html
+++ b/app/src/declaration/view/lock-dialog.html
@@ -41,7 +41,7 @@
         </md-dialog-content>
 
         <md-dialog-actions>
-            <md-button ng-disabled="lockDeclarationForm.$invalid" type="submit" class="md-primary md-text-icon-button">
+            <md-button type="submit" class="md-primary md-text-icon-button">
                 <md-icon>lock</md-icon> Afslut
             </md-button>
         </md-dialog-actions>
