--- a/app/src/declaration/view/declaration.html
+++ b/app/src/declaration/view/declaration.html
@@ -11,6 +11,6 @@
     </div>
 
     <div flex>
-        <div ui-view='declarations'></div>
+        <div ui-view='declarations'></div>doc
     </div>
 </div>
